test/libsolidity/syntaxTests/events/file_level_event_shadowing_contract.sol
event E();
contract E {}
// ----
// DeclarationError 2333: (11-24): Identifier already declared.
